All functionalities work now, .DS_Store removed from repot

--- a/medication-reminder/Base.lproj/LaunchScreen.storyboard
+++ b/medication-reminder/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +20,46 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VAq-cs-OjM">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By Stanley Moon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="icp-Dl-5qO">
+                                        <rect key="frame" x="97.5" y="319" width="180" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.20392156862745098" green="0.66666666666666663" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="icp-Dl-5qO" firstAttribute="centerY" secondItem="VAq-cs-OjM" secondAttribute="centerY" id="LQD-bN-MYq"/>
+                                    <constraint firstItem="icp-Dl-5qO" firstAttribute="centerX" secondItem="VAq-cs-OjM" secondAttribute="centerX" id="xIf-Gp-HPI"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Medication Reminder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HtO-IW-6hX">
+                                <rect key="frame" x="60.5" y="217.5" width="254.5" height="32.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="HtO-IW-6hX" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-100" id="5jm-h3-wqw"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="VAq-cs-OjM" secondAttribute="bottom" id="C4L-gZ-OVz"/>
+                            <constraint firstItem="VAq-cs-OjM" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="FH4-eA-SOJ"/>
+                            <constraint firstItem="VAq-cs-OjM" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="LmA-ah-fGF"/>
+                            <constraint firstAttribute="trailing" secondItem="VAq-cs-OjM" secondAttribute="trailing" id="cXS-sK-gab"/>
+                            <constraint firstItem="VAq-cs-OjM" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="mmt-7P-oiU"/>
+                            <constraint firstItem="HtO-IW-6hX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="rL3-tZ-KwG"/>
+                            <constraint firstItem="VAq-cs-OjM" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="yI8-5p-uv7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
 </document>
